download excel approvazione conferme + conferma light contratti e piani di consegna

--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
@@ -183,6 +183,7 @@ dataConferma=Data conferma
 quantitaConferma=Quant conferma
 dataRichiesta=Data richiesta
 quantitaRichiesta=Quant richiesta
+dataCreazione=Data creazione
 deltaGG=Delta GG
 deltaQuantita=Delta Quant.
 MSG_NO_TO_CONFIRM=Nessuna dato trovato
