--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_en.properties
@@ -184,6 +184,7 @@ dataConferma=Date confirm
 quantitaConferma=Qty confirm
 dataRichiesta=Date Requested
 quantitaRichiesta=Qty Requested
+dataCreazione=Date Creation
 deltaGG=Delta Day
 deltaQuantita=Delta Qty
 MSG_NO_TO_CONFIRM=No data found
