--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it_IT.properties
@@ -183,6 +183,7 @@ AddNota=Aggiungi nota per il rifiuto (non obbligatoria)
 dataConferma=Data conferma
 quantitaConferma=Quant conferma
 dataRichiesta=Data richiesta
+dataCreazione=Data creazione
 quantitaRichiesta=Quant richiesta
 deltaGG=Delta GG
 deltaQuantita=Delta Quant.
