--- a/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n_it_IT.properties
@@ -440,3 +440,4 @@ ErrorDocType=Selezionare un tipo documento
 DownloadSel=Download
 
 cantOpenOrder=Non si hanno i permessi per visualizzare l''ordine selezionato
+ConfirmOrdAckn=Order Acknowledge
