--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_en.properties
@@ -193,3 +193,6 @@ advice_msg = Need Prob Mod Sched
 ZINVALIDITA=Start dt
 ZFINVALIDATA=End dt
 COMMENT=Comment
+CONF_TYPE=Confirm type
+CONF_TYPE_PREZZO=price
+CONF_TYPE_QUANT=quantity
