--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_fi.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_fi.properties
@@ -77,3 +77,6 @@ WERKS=Tehdas
 ZFINVALIDATA=Loppu dt
 ZINVALIDITA=Aloita dt
 ZTERM=Maksa ehdot
+CONF_TYPE=Vahvistustyyppi
+CONF_TYPE_PREZZO=hinta
+CONF_TYPE_QUANT=määrä
