--- a/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n.properties
@@ -445,3 +445,5 @@ ErrorDocType=Selezionare un tipo documento
 DownloadSel=Download
 
 cantOpenOrder=Non si hanno i permessi per visualizzare l''ordine selezionato
+
+ConfirmOrdAckn=Order acknowledge
