--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_sv_SE.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_sv_SE.properties
@@ -86,7 +86,7 @@ KZABS=Acknowl. reqd
 KZDIS=MRP-relevant information
 LABNR=Bekräftad order
 Legend=Legend
-LIFNR=Leverantör
+LIFNR=Leverantörsnamn
 loading=Läser in
 LPEIN=Leveransdatum för kategori
 MAHN1=1: a påminelse
@@ -154,18 +154,18 @@ statusL=Låg kritisk
 statusM=Medium kritiskt
 statusMH=Medium hög kritisk
 statusML=Medium låg kritisk
-supplier =Leverantör
-supplierCode=Leverantörskod
-supplierDescr =Leverantör Beskrivning
-supplierName=Leverantörsnamn
-supplierOrdersHeader =Leverantör order rubriker
+supplier =Leverantörsnamn
+supplierCode=Leverantörsnamnskod
+supplierDescr =Leverantörsnamn Beskrivning
+supplierName=Leverantörsnamnsnamn
+supplierOrdersHeader =Leverantörsnamn order rubriker
 SYSID=System-ID
 TESTO=Text
 title=Välj Bekräftelseskategori
 Title_CatConf =Beställning
 titleMatnr=Sök material
 titleModMetaSup=Uppdatera metasupplysningsdata
-titleSuppliers=Leverantörssökning
+titleSuppliers=Leverantörsnamnssökning
 TOT=Total
 TXZ01=kort beskrivning
 UEBTK=Obegränsat
@@ -194,4 +194,4 @@ ErrorDocType=Select a document type
 DownloadSel=Download
 lastEkesDate=Last conf. date
 cantOpenOrder=Yuo are not authorized to open this order
-ConfirmOrdAckn=Order acknowledge
+ConfirmOrdAckn=Order Acknowledge
