--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n.properties
@@ -192,3 +192,6 @@ advice_msg = Necessario Prob Mod Sched
 ZINVALIDITA=Init valid
 ZFINVALIDATA=Fin valid
 COMMENT=Commento
+CONF_TYPE=Tipo conferma
+CONF_TYPE_PREZZO=prezzo
+CONF_TYPE_QUANT=quantit\u00E0
