--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_it.properties
@@ -193,3 +193,6 @@ advice_msg = Necessario Prob Mod Sched
 ZINVALIDITA=Init valid
 ZFINVALIDATA=Fin valid
 COMMENT=Commento
+CONF_TYPE=Tipo conferma
+CONF_TYPE_PREZZO=prezzo
+CONF_TYPE_QUANT=quantità
