--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_pl_PL.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_pl_PL.properties
@@ -77,3 +77,6 @@ WERKS=Zakład
 ZFINVALIDATA=Data końcowa
 ZINVALIDITA=Data początkowa
 ZTERM=Warunek płatności
+CONF_TYPE=Typ potwierdzenia
+CONF_TYPE_PREZZO=Cena £
+CONF_TYPE_QUANT=Ilość
