--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_sv_SE.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_sv_SE.properties
@@ -19,7 +19,7 @@ deltaGG=Delta-dagen
 deltaProgr=Delta progressivo
 deltaQuant=Delta kvantit \ u00E0
 deltaQuantita=Delta Qty
-EBELN=Purch.Doc.
+EBELN=Inköpsdokument
 EBELP=Artikel
 EBTYP=Conf.Cat.
 EINDT=Leveransdatum
@@ -34,7 +34,7 @@ filter=Filtrera:
 IDNLF=Supp. Matta.
 INCO1=Incoterms (del 1)
 legend =Statuslegenden
-LIFNR=Leverantör
+LIFNR=Leverantörsnamn
 LPEIN=Leveransdatum för kategori
 MATNR=Material
 MENGE=Kvantitet
@@ -45,7 +45,7 @@ METASUP=Metasupplier
 MNG02=Engagerad antal
 MSG_Confirm_Reject_Text =Vill du bekräfta den här åtgärden?
 MSG_NO_TO_CONFIRM=Ingen information hittad
-NAME1=Leverantörsnamn
+NAME1=Leverantörsnamnsnamn
 NETPR=Nettopris
 NETPR_NEW=Nytt nettopris
 noData=Ingen information hittad
@@ -67,13 +67,16 @@ schedulations=Schedulations
 schedules =scheman
 status =Status
 statusColorTitle=Färgstatuslegenden
-supplier=Leverantör
+supplier=Leverantörsnamn
 SYSID=System-ID
 title=Bekräftelse Godkänn
 titleModOds=Beställningsändringsförfrågan
 TXZ01=Materialbeskrivning
 WEMNG=Antal levererad
-WERKS=Växt
+WERKS=Anläggning
 ZFINVALIDATA=Slut dt
 ZINVALIDITA=Börja dt
 ZTERM=Betalningsvillkor
+CONF_TYPE=Bekräftelsestyp
+CONF_TYPE_PREZZO=pris
+CONF_TYPE_QUANT=kvantitet
