--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_sv_SE.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_sv_SE.properties
@@ -59,7 +59,7 @@ Export_Excel=Exportera tabelldata i Excel-fil
 gruppoAcquisti =Grp. Acq.
 GWLDT=Garantidatum
 homePhone=Hemtelefon
-IDNLF=Leverantörs material nummer
+IDNLF=Leverantörsnamns material nummer
 INCO1=Incoterms (del 1)
 INCO2=Incoterms (del 2)
 iva=s. iva
@@ -72,7 +72,7 @@ KTPNR=Position Antal övre kontrakt
 KZABS=Bekräftelse krävs
 KZDIS=MRP-relevant information
 LABNR=Order bekräftelse
-LIFNR=Leverantör
+LIFNR=Leverantörsnamn
 loading=Läser in
 lotto =Batch
 LPEIN=Leveransdatum för kategori
@@ -128,16 +128,16 @@ search=Sök
 searchOrders =Sökorder
 SMTP_ADDR=E-postadress
 Status=Status
-supplier =Leverantör
-supplierCode=Leverantörskod
-supplierDescr =Leverantör beskrivning
-supplierName=Leverantörsnamn
-supplierOrdersHeader =Leverantör beställer rubriker
+supplier =Leverantörsnamn
+supplierCode=Leverantörsnamnskod
+supplierDescr =Leverantörsnamn beskrivning
+supplierName=Leverantörsnamnsnamn
+supplierOrdersHeader =Leverantörsnamn beställer rubriker
 SYSID=System-ID
 testo=Text
 title=Inkommande leverans
 titleMatnr=Sök material
-titleSuppliers=Leverantörssökning
+titleSuppliers=Leverantörsnamnssökning
 TOT=Total
 TXZ01=kort beskrivning
 UEBTK=Obegränsat
