--- a/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_sv_SE.properties
+++ b/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_sv_SE.properties
@@ -18,13 +18,13 @@ ERR_Selection_Row=Välj en eller flera positioner.
 ERR_Type_missmatch =Endast xlx, docx, pdf, txt är tillåtna
 Export_Excel=Exportera tabelldata i Excel-fil
 Header=Information om rubriken
-IDNLF=Leverantörens materialkod
+IDNLF=Leverantörsnamnens materialkod
 inProgress=Pågående
 INPUTXT =Textinmatning
 Interventi=interventioner
 Item=Produktinformation
-LIFNR=Leverantör
-LIFNUM=Leverantör
+LIFNR=Leverantörsnamn
+LIFNUM=Leverantörsnamn
 LONGTXT =Historia
 materialDescr=Materialbeskrivning
 MATNR=Materialkod
@@ -41,7 +41,7 @@ REVLV=Status
 RKMNG=Kvantitet
 SERIALNR=Serienummer
 status=Status
-supplier=Leverantör
+supplier=Leverantörsnamn
 tipoAvviso=Qual. Inte. Typ
 Tipologia=Typ
 title=Kvalitetsmeddelanden
