--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
@@ -436,4 +436,4 @@ lastEkesDate=Last conf. date
 noConfirms=No confirms
 
 cantOpenOrder=Non si hanno i permessi per visualizzare l''ordine selezionato
-ConfirmOrdAckn=Conferma ordine
+ConfirmOrdAckn=Order acknowledge
