--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_sv_SE.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_sv_SE.properties
@@ -60,7 +60,7 @@ ERR_Sum_Schedulations =Schemaläggningssumman för position {0} överstiger den
 ERR_Sum_Schedulations_Single =Schemaläggningssumman för position överstiger den totala mängden position
 ESTKZ=Skapande ind.
 ETENR=Num Schedulation
-ETENS=Leverantörens orderbekräftelse nummer
+ETENS=Leverantörsnamnens orderbekräftelse nummer
 ETFZ1=Första fasta perioden
 ETFZ2=Andra fast period
 Export_Excel=Exportera tabelldata i Excel-fil
@@ -72,7 +72,7 @@ Header =Rubrik
 HeaderTexts =texter
 homePhone=Hemtelefon
 ID=ID
-IDNLF=Leverantörs material numemr
+IDNLF=Leverantörsnamns material numemr
 INCO1=Incoterms (del 1)
 INCO2=Incoterms (del 2)
 iva=s. iva
@@ -87,7 +87,7 @@ KZABS=Acknowl. reqd
 KZDIS=MRP-relevant information
 LABNR=Beställ Acknowl.
 Legend=Legend
-LIFNR=Leverantör
+LIFNR=Leverantörsnamn
 loading=Läser in
 LPEIN=Leveransdatum för kategori
 MAHN1=1: a Rem./Exped.
@@ -152,18 +152,18 @@ statusL=Låg kritisk
 statusM=Medium kritiskt
 statusMH=Medium hög kritisk
 statusML=Medium låg kritisk
-supplier =Leverantör
-supplierCode=Leverantörskod
-supplierDescr =Leverantör beskrivning
-supplierName=Leverantörsnamn
-supplierOrdersHeader =Leverantör beställnings rubriker
+supplier =Leverantörsnamn
+supplierCode=Leverantörsnamnskod
+supplierDescr =Leverantörsnamn beskrivning
+supplierName=Leverantörsnamnsnamn
+supplierOrdersHeader =Leverantörsnamn beställnings rubriker
 SYSID=System-ID
 TESTO=Text
 Title_CatConf =Välj Bekräftelseskategori
 title=Schemaläggningsavtal
 titleMatnr=Sök material
 titleModMetaSup=Uppdatera metasupplysningsdata
-titleSuppliers=Leverantörssökning
+titleSuppliers=Leverantörsnamnssökning
 TOT=Total
 TXZ01=kort beskrivning
 UEBTK=Obegränsat
