--- a/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_sv_SE.properties
+++ b/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_sv_SE.properties
@@ -12,7 +12,7 @@ personalization=personalizzation
 POSNR=Leveransobjekt
 RangeDateLF=Leveransdatum
 RangeDateWA=Utgivningsdatum
-supplier=Leverantör
+supplier=Leverantörsnamn
 SYSID=System-ID
 title=Hanteringsenhet
 titleMatnr=Materialsökning
