--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_fi.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_fi.properties
@@ -19,7 +19,7 @@ deltaGG=Deltapäivä
 deltaProgr=Delta progressivo
 deltaQuant=Delta-kvantti \ u00E0
 deltaQuantita=Delta Määrä
-EBELN=Purch.Doc.
+EBELN=Inköpsdokument
 EBELP=erä
 EBTYP=Conf.Cat.
 EINDT=Toimituspäivä
@@ -41,7 +41,7 @@ MENGE=Määrä
 MENGE_NEW=Uusi määrä
 MessConf=Haluatko varmasti vahvistaa valittujen sijaintien hinnan?
 MessReject=Haluatko varmasti hylätä valitut sijainnit?
-METASUP=Metasupplier
+METASUP=Huvudleverantör
 MNG02=Sitoutunut määrä
 MSG_Confirm_Reject_Text =Haluatko vahvistaa tämän operaation?
 MSG_NO_TO_CONFIRM=Dataa ei löytynyt
