--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_sv.properties
@@ -29,7 +29,7 @@ ERR_Confirmation_In_Corso_Approvazione =Bekräftelse av bekräftelsebeställnin
 ERR_Export=Inga beställningar hittades för att exportera
 ERR_NoOrderSelect=Välj minst en position.
 Esegui=Kör
-ETENR=Schema linje
+ETENR=Schemaläggnings dok.
 filter=Filtrera:
 IDNLF=Supp. Matta.
 INCO1=Incoterms (del 1)
@@ -41,7 +41,7 @@ MENGE=Kvantitet
 MENGE_NEW=Ny mängd
 MessConf=Är du säker på att du vill bekräfta pris för valda positioner?
 MessReject=Är du säker på att du vill avvisa valda positioner?
-METASUP=Metasupplier
+METASUP=Huvudleverantör
 MNG02=Engagerad antal
 MSG_Confirm_Reject_Text =Vill du bekräfta den här åtgärden?
 MSG_NO_TO_CONFIRM=Ingen information hittad
@@ -67,7 +67,7 @@ schedulations=Schedulations
 schedules =scheman
 status =Status
 statusColorTitle=Färgstatuslegenden
-supplier=Leverantörsnamn
+supplier=Leverantör
 SYSID=System-ID
 title=Bekräftelse Godkänn
 titleModOds=Beställningsändringsförfrågan
@@ -80,3 +80,6 @@ ZTERM=Betalningsvillkor
 CONF_TYPE=Bekräftelsestyp
 CONF_TYPE_PREZZO=pris
 CONF_TYPE_QUANT=kvantitet
+PLANT_DESCR =Anläggningsbeskrivning
+materialCode =Material nummer
+checPosition=Kontrollera position
