--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_sv.properties
@@ -27,7 +27,7 @@ DABMG=Antal reducerad
 date=Datum
 Deliveries=leveranser
 EAN11=Europeiska artikelkoden
-EBELN=Dokumentera
+EBELN=Position
 EBELP=Inköps. Ord. Artikel
 EBTYP=Bekräftelseskategori
 EINDT=Leveransdatum
@@ -80,14 +80,14 @@ MAHN1=1: a Rem./Exped.
 MAHN2=2: a Rem./Exped.
 MAHN3=3: e Rem./Exped.
 MAHNZ=Nej. Rem./Exp.
-materialCode =Materialkod
+Material nummer
 materialDescr =Materialbeskrivning
 MATNR=Material
 MEINS=Basenhet
 MENGE_SCH=Öppen kvantitet
 MENGE=Kvantitet
 MessConf=Är du säker på att du vill skapa inkommande leveranser för utvalda positioner?
-METASUP=Metasupplier
+METASUP=Huvudleverantör
 MFRNR=Number Builder
 MFRPN=Komponentkod av tillverkare
 MNG02=Bekräftat antal
@@ -165,3 +165,5 @@ confirmationsSpedizioni = Shipping
 EXDIV2=HU supplier
 EXIDV=HU Customer
 NumeroProgressivoConferma = Progressive number
+PLANT_DESCR =Anläggningsbeskrivning
+checPosition=Kontrollera position
