--- a/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_sv.properties
@@ -17,7 +17,7 @@ LIFNRr=Leverantörsnamn
 loading=läser in
 LWEDT=Sista GR: datum
 LWEMG=Sista GR: antal
-materialCode =Materialkod
+Material nummer
 materialDescr =Materialbeskrivning
 MATNR=Material
 MEINS=UoM
