--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_sv.properties
@@ -13,10 +13,10 @@ BSTAE=Bekräftelseknapp
 BSTYP=Köp dokumentkategori
 CAT_CONS=Leverans kategori
 city=Kontrollera position
-close=Stad
-COMMENT=Stänga
+close=Stäng
+COMMENT=Kommentar
 company=Kommentar
-Confirm=Företag
+Confirm=Bekräfta
 confirmAndClose=Bekräfta
 confirmations=Bekräfta och stäng
 confirmationType=bekräftelser
@@ -59,7 +59,7 @@ ERR_Selection_Row=Välj en eller flera positioner.
 ERR_Sum_Schedulations =Schemaläggningssumman för position {0} överstiger den totala positionen
 ERR_Sum_Schedulations_Single =Schemaläggningssumman för position överstiger den totala mängden position
 ESTKZ=Skapande ind.
-ETENR=Num Schedulation
+ETENR=Schemaläggnings dok.
 ETENS=Leverantörsnamnens orderbekräftelse nummer
 ETFZ1=Första fasta perioden
 ETFZ2=Andra fast period
@@ -94,13 +94,13 @@ MAHN1=1: a Rem./Exped.
 MAHN2=2: a Rem./Exped.
 MAHN3=3: e Rem./Exped.
 MAHNZ=Nej. Rem./Exp.
-materialCode =Materialkod
+Material nummer
 materialDescr =Materialbeskrivning
 MATNR=Material
 MEINS=Basenhet
 MENGE_RELEASE=Kvantitet frisläppande
 MENGE=Kvantitet
-METASUP=Metasupplier
+METASUP=Huvudleverantör
 MFRNR=Number Builder
 MFRPN=Komponentkod av tillverkare
 MNG02=Engagerad antal
@@ -121,7 +121,7 @@ orderPositionViewTitle =Order positioner
 orders =Order
 paymentConditionDescr =Betalningsvilkor förklaring
 PEINH=Pris Enhet
-PLANT_DESCR =Anläggning beskrivning
+PLANT_DESCR =Anläggningsbeskrivning
 positionConfirmation=Positionsbekräftelse
 positionNotConfirmable =Positioner {0} kan inte bekräftas
 positions =positioner
@@ -189,7 +189,10 @@ ZTERM=Betalningsvillkor
 
 explodeAllSchedulation= Explode all positions schedulations
 
-lastEkesDate=Last conf. date
+lastEkesDate=Bekräftat datum
 noConfirms=No confirms
 cantOpenOrder=Yuo are not authorized to open this order
 ConfirmOrdAckn=Order acknowledge
+Comfirm=Bekräfta
+Cancel=Avbryt
+checPosition=Kontrollera position
