--- a/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_sv.properties
@@ -76,7 +76,7 @@ selectContactType=Välj kontakttyp
 statoMetafornitore=Metasuppliertillstånd
 StatoMetafornitore=Status
 street=Gata
-Supplier=Leverantörsnamnskod
+Supplier=Leverantör
 supplierName =Leverantörsnamnsnamn
 surname=Efternamn
 Surname=efternamn
@@ -88,3 +88,4 @@ titleSuppliers=Leverantörsnamner
 uploadDoc=Ladda upp dokument
 huObbligatoriaPerPlant=HU Exceptions for plants
 plant=Plant
+PLANT_DESCR =Anläggningsbeskrivning
