--- a/AUPSUP_HTML5_METASUPPLIER_M/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_METASUPPLIER_M/webapp/i18n/i18n_sv.properties
@@ -76,7 +76,7 @@ selectContactType=Välj kontakttyp
 statoMetafornitore=Metasuppliertillstånd
 StatoMetafornitore=Status
 street=Gata
-Supplier=Leverantörsnamnskod
+Supplier=Leverantör
 supplierName =Leverantörsnamnsnamn
 surname=Efternamn
 Surname=efternamn
@@ -86,3 +86,4 @@ titleForm=Titel
 titleModMetaSup =Uppdatera meta-Leverantörsnamn
 titleSuppliers=Leverantörsnamner
 uploadDoc=Ladda upp dokument
+PLANT_DESCR =Anläggningsbeskrivning
