--- a/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_sv_SE.properties
+++ b/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_sv_SE.properties
@@ -29,7 +29,7 @@ LONGTXT =Historia
 materialDescr=Materialbeskrivning
 MATNR=Materialkod
 MATXT=Materialbeskrivning
-METASUP=Metasupplier
+METASUP=Huvudleverantör
 Misure=åtgärder
 MSG_Confirm_Text=Är du säker på att du vill bekräfta?
 NAME1_WRK =Anläggning 
@@ -51,3 +51,4 @@ TXT =Text
 WERKS=Anläggning 
 XBLNR =Leveransanteckning / faktura
 ZNOME=Ansvarig
+PLANT_DESCR =Anläggningsbeskrivning
