--- a/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_sv_SE.properties
+++ b/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_sv_SE.properties
@@ -7,7 +7,7 @@ EXIDV=Extern hanteringsenhet
 materialCode=Materialkod
 materialDescr=Materialbeskrivning
 MATNR=Material
-METASUP=Metasupplier
+METASUP=Huvudleverantör
 personalization=personalizzation
 POSNR=Leveransobjekt
 RangeDateLF=Leveransdatum
@@ -24,3 +24,5 @@ VERUR=Distributionsleverans
 VGBEL=Referensdok.
 WERKS=Anläggning
 EXDIV2=HU Supplier
+Comfirm=Bekräfta
+Cancel=Avbryt
