--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_sv.properties
@@ -19,7 +19,7 @@ deltaGG=Delta-dagen
 deltaProgr=Delta progressivo
 deltaQuant=Delta kvantit \ u00E0
 deltaQuantita=Delta Qty
-EBELN=Purch.Doc.
+EBELN=Inköpsdokument
 EBELP=Artikel
 EBTYP=Conf.Cat.
 EINDT=Leveransdatum
@@ -29,23 +29,23 @@ ERR_Confirmation_In_Corso_Approvazione =Bekräftelse av bekräftelsebeställnin
 ERR_Export=Inga beställningar hittades för att exportera
 ERR_NoOrderSelect=Välj minst en position.
 Esegui=Kör
-ETENR=Schema linje
+ETENR=Schemaläggnings dok.
 filter=Filtrera:
 IDNLF=Supp. Matta.
 INCO1=Incoterms (del 1)
 legend =Statuslegenden
-LIFNR=Leverantör
+LIFNR=Leverantörsnamn
 LPEIN=Leveransdatum för kategori
 MATNR=Material
 MENGE=Kvantitet
 MENGE_NEW=Ny mängd
 MessConf=Är du säker på att du vill bekräfta pris för valda positioner?
 MessReject=Är du säker på att du vill avvisa valda positioner?
-METASUP=Metasupplier
+METASUP=Huvudleverantör
 MNG02=Engagerad antal
 MSG_Confirm_Reject_Text =Vill du bekräfta den här åtgärden?
 MSG_NO_TO_CONFIRM=Ingen information hittad
-NAME1=Leverantörsnamn
+NAME1=Leverantörsnamnsnamn
 NETPR=Nettopris
 NETPR_NEW=Nytt nettopris
 noData=Ingen information hittad
@@ -73,7 +73,13 @@ title=Bekräftelse Godkänn
 titleModOds=Beställningsändringsförfrågan
 TXZ01=Materialbeskrivning
 WEMNG=Antal levererad
-WERKS=Växt
+WERKS=Anläggning
 ZFINVALIDATA=Slut dt
 ZINVALIDITA=Börja dt
 ZTERM=Betalningsvillkor
+CONF_TYPE=Bekräftelsestyp
+CONF_TYPE_PREZZO=pris
+CONF_TYPE_QUANT=kvantitet
+PLANT_DESCR =Anläggningsbeskrivning
+materialCode =Material nummer
+checPosition=Kontrollera position
