--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_sv.properties
@@ -27,7 +27,7 @@ DABMG=Antal reducerad
 date=Datum
 Deliveries=leveranser
 EAN11=Europeiska artikelkoden
-EBELN=Dokumentera
+EBELN=Position
 EBELP=Inköps. Ord. Artikel
 EBTYP=Bekräftelseskategori
 EINDT=Leveransdatum
@@ -59,7 +59,7 @@ Export_Excel=Exportera tabelldata i Excel-fil
 gruppoAcquisti =Grp. Acq.
 GWLDT=Garantidatum
 homePhone=Hemtelefon
-IDNLF=Leverantörs material nummer
+IDNLF=Leverantörsnamns material nummer
 INCO1=Incoterms (del 1)
 INCO2=Incoterms (del 2)
 iva=s. iva
@@ -72,7 +72,7 @@ KTPNR=Position Antal övre kontrakt
 KZABS=Bekräftelse krävs
 KZDIS=MRP-relevant information
 LABNR=Order bekräftelse
-LIFNR=Leverantör
+LIFNR=Leverantörsnamn
 loading=Läser in
 lotto =Batch
 LPEIN=Leveransdatum för kategori
@@ -80,14 +80,14 @@ MAHN1=1: a Rem./Exped.
 MAHN2=2: a Rem./Exped.
 MAHN3=3: e Rem./Exped.
 MAHNZ=Nej. Rem./Exp.
-materialCode =Materialkod
+Material nummer
 materialDescr =Materialbeskrivning
 MATNR=Material
 MEINS=Basenhet
 MENGE_SCH=Öppen kvantitet
 MENGE=Kvantitet
 MessConf=Är du säker på att du vill skapa inkommande leveranser för utvalda positioner?
-METASUP=Metasupplier
+METASUP=Huvudleverantör
 MFRNR=Number Builder
 MFRPN=Komponentkod av tillverkare
 MNG02=Bekräftat antal
@@ -128,16 +128,16 @@ search=Sök
 searchOrders =Sökorder
 SMTP_ADDR=E-postadress
 Status=Status
-supplier =Leverantör
-supplierCode=Leverantörskod
-supplierDescr =Leverantör beskrivning
-supplierName=Leverantörsnamn
-supplierOrdersHeader =Leverantör beställer rubriker
+supplier =Leverantörsnamn
+supplierCode=Leverantörsnamnskod
+supplierDescr =Leverantörsnamn beskrivning
+supplierName=Leverantörsnamnsnamn
+supplierOrdersHeader =Leverantörsnamn beställer rubriker
 SYSID=System-ID
 testo=Text
 title=Inkommande leverans
 titleMatnr=Sök material
-titleSuppliers=Leverantörssökning
+titleSuppliers=Leverantörsnamnssökning
 TOT=Total
 TXZ01=kort beskrivning
 UEBTK=Obegränsat
@@ -165,3 +165,5 @@ confirmationsSpedizioni = Shipping
 EXDIV2=HU supplier
 EXIDV=HU Customer
 NumeroProgressivoConferma = Progressive number
+PLANT_DESCR =Anläggningsbeskrivning
+checPosition=Kontrollera position
