--- a/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_sv.properties
@@ -18,18 +18,18 @@ ERR_Selection_Row=Välj en eller flera positioner.
 ERR_Type_missmatch =Endast xlx, docx, pdf, txt är tillåtna
 Export_Excel=Exportera tabelldata i Excel-fil
 Header=Information om rubriken
-IDNLF=Leverantörens materialkod
+IDNLF=Leverantörsnamnens materialkod
 inProgress=Pågående
 INPUTXT =Textinmatning
 Interventi=interventioner
 Item=Produktinformation
-LIFNR=Leverantör
-LIFNUM=Leverantör
+LIFNR=Leverantörsnamn
+LIFNUM=Leverantörsnamn
 LONGTXT =Historia
 materialDescr=Materialbeskrivning
 MATNR=Materialkod
 MATXT=Materialbeskrivning
-METASUP=Metasupplier
+METASUP=Huvudleverantör
 Misure=åtgärder
 MSG_Confirm_Text=Är du säker på att du vill bekräfta?
 NAME1_WRK =Anläggning 
@@ -41,7 +41,7 @@ REVLV=Status
 RKMNG=Kvantitet
 SERIALNR=Serienummer
 status=Status
-supplier=Leverantör
+supplier=Leverantörsnamn
 tipoAvviso=Qual. Inte. Typ
 Tipologia=Typ
 title=Kvalitetsmeddelanden
@@ -51,3 +51,4 @@ TXT =Text
 WERKS=Anläggning 
 XBLNR =Leveransanteckning / faktura
 ZNOME=Ansvarig
+PLANT_DESCR =Anläggningsbeskrivning
