--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_sv.properties
@@ -12,10 +12,10 @@ BSTAE=Bekräftelseknapp
 BSTYP=Köp dokumentkategori
 CAT_CONS=Leverans kategori
 city=Kontrollera position
-close=Stad
-COMMENT=Stänga
+close=Stäng
+COMMENT=Kommentar
 company=Kommentar
-Confirm=Företag
+Confirm=Bekräfta
 confirmAndClose=Bekräfta
 confirmations=Bekräfta och stäng
 confirmationType=bekräftelser
@@ -24,8 +24,8 @@ DABMG=Positioner korrekt utarbetade
 date=Antal reducerad
 DESCRIPTION=Datum
 EAN11=Beskrivning
-EBELN=Europeiska artikelkoden
-EBELP=Dokumentera
+EBELN=Inköpsdokument
+EBELP=Position
 EBTYP=Placera
 EINDT=Bekräftelseskategori
 EKGRP=Leveransdatum
@@ -48,8 +48,8 @@ ERR_Price_DateE =Beställ {0} Värdera giltighetens slutdatum
 ERR_Price_Perc_Down =Position {0} priset överstiger andelen lägre avvikelse
 ERR_Price_Perc_Up =Position {0} priset överstiger procentsatsen för övre avvikelse
 ERR_Price_valB =Beställ {0} Det går inte att välja ett datum före än idag
-ERR_Quant_Perc_Down_Single =La somma delle quantit \ u00E0 inserite supera la percentuale di scostamento inferiore
-ERR_Quant_Perc_Up_Single =La somma delle quantit \ u00E0 inserite supera la percentuale di scostamento superiore
+ERR_Quant_Perc_Down_Single =Summan av producerade kvantiteter överstiger den lägre avvikelsesprocenten
+ERR_Quant_Perc_Up_Single =Summan av de angivna kvantiteterna överstiger den övre avvikelsesprocenten 
 ERR_Schedulations_empty=Vänligen sätt in scheman
 ERR_Schedulations_empty_single=Vänligen sätt in schemaläggningar för position {0}
 ERR_Schedulations_Mandatory =Vänligen sammanställa alla schemaläggningsfält
@@ -58,7 +58,7 @@ ERR_Selection_Row=Välj en eller flera positioner.
 ERR_Sum_Schedulations =Schemaläggningssumman för position {0} överstiger den totala positionen
 ERR_Sum_Schedulations_Single =Schemaläggningssumman för position överstiger den totala mängden position
 ESTKZ=Skapande ind.
-ETENR=Schemaläggning dum.
+ETENR=Schemaläggnings dok.
 ETENS=Bekräftelse av nummerförsäljare
 ETFZ1=Första fasta perioden
 ETFZ2=Andra fast period
@@ -71,7 +71,7 @@ Header =Rubrik
 HeaderTexts =texter
 homePhone=Hemtelefon
 ID=ID
-IDNLF=Supp.Mat.No.
+IDNLF=Lev.Mat.nr  (Leverantörsmaterialnummer)
 INCO1=Incoterms (del 1)
 INCO2=Incoterms (del 2)
 iva=s. iva
@@ -86,20 +86,20 @@ KZABS=Acknowl. reqd
 KZDIS=MRP-relevant information
 LABNR=Bekräftad order
 Legend=Legend
-LIFNR=Leverantör
+LIFNR=Leverantörsnamn
 loading=Läser in
 LPEIN=Leveransdatum för kategori
 MAHN1=1: a påminelse
 MAHN2=2: a påminelse
 MAHN3=3: e påminelse
 MAHNZ=Ej Påminelser
-materialCode =Materialkod
-materialDescr =Materialbeskrivning
+materialCode=Material nummer
+materialDescr=Materialbeskrivning
 MATNR=Material
 MEINS=Basenhet
 MENGE=Kvantitet frisläppande
 MENGE_RELEASE=Kvantitet
-METASUP=Metasupplier
+METASUP=Huvudleverantör
 MFRNR=Number Builder
 MFRPN=Komponentkod av tillverkare
 MNG02=Bekräftat antal
@@ -122,7 +122,7 @@ ORIG_NETPR=Orig. nettopris
 ORIG_PEINH=Orig. pris enhet
 paymentConditionDescr =Paym. dir. descr.
 PEINH=Pris Enhet
-PLANT_DESCR =Anläggning/ beskrivning
+PLANT_DESCR =Anläggningsbeskrivning
 positionConfirmation=Positionsbekräftelse
 positionNotConfirmable =Positioner {0} kan inte bekräftas
 positions =positioner
@@ -154,18 +154,18 @@ statusL=Låg kritisk
 statusM=Medium kritiskt
 statusMH=Medium hög kritisk
 statusML=Medium låg kritisk
-supplier =Leverantör
-supplierCode=Leverantörskod
-supplierDescr =Leverantör Beskrivning
-supplierName=Leverantörsnamn
-supplierOrdersHeader =Leverantör order rubriker
+supplier =Leverantörsnamn
+supplierCode=Leverantörsnamnskod
+supplierDescr =Leverantörsnamn Beskrivning
+supplierName=Leverantörsnamnsnamn
+supplierOrdersHeader =Leverantörsnamn order rubriker
 SYSID=System-ID
 TESTO=Text
 title=Välj Bekräftelseskategori
 Title_CatConf =Beställning
 titleMatnr=Sök material
 titleModMetaSup=Uppdatera metasupplysningsdata
-titleSuppliers=Leverantörssökning
+titleSuppliers=Leverantörsnamnssökning
 TOT=Total
 TXZ01=kort beskrivning
 UEBTK=Obegränsat
@@ -191,6 +191,11 @@ ZTERM=Betalningsvillkor
 
 DocType= Document type
 ErrorDocType=Select a document type
-DownloadSel=Download
-lastEkesDate=Last conf. date
+DownloadSel=Ladd aner
+lastEkesDate=Bekräftat datum
 cantOpenOrder=Yuo are not authorized to open this order
+ConfirmOrdAckn=Order Acknowledge
+Comfirm=Bekräfta
+Cancel=Avbryt
+checPosition=Kontrollera position
+PLANT_DESCR=Anläggningsbeskrivning
