--- a/AUPSUP_HTML5_METASUPPLIER_M/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_METASUPPLIER_M/webapp/i18n/i18n_sv.properties
@@ -1,17 +1,17 @@
 active=Aktiva
 approvato=Godkänd
 appTitle=Metasupplierhantering
-appTitle_BM=Leverantörens referenskontakter
-appTitle_M=Leverantörens referenskontakter
+appTitle_BM=Leverantörsnamnens referenskontakter
+appTitle_M=Leverantörsnamnens referenskontakter
 attachments=bilagor
 Attivato=Aktiva
 BC=Metasupplierhantering
-BM=Leverantörens referenskontakter
+BM=Leverantörsnamnens referenskontakter
 BU=Businnes-enheten
 Cancel=Stänga
 cap=Postnummer
 chiaveRicerca=Söknyckel
-ChooseDefaultSupplier=Standardleverantör
+ChooseDefaultSupplier=StandardLeverantörsnamn
 codiceMetafornitore=Metasupplierkod
 Confirm=Bekräfta
 confirmDeletion=Bekräftar du borttagningen av denna kontakt?
@@ -21,16 +21,16 @@ contatti=Kontakter
 createContact=Skapa kontakt
 createMetasupplier=Skapa metasuppliers
 createSupplier=Skapa metasupplier
-datiAnagraficiFornitore=Meta-leverantörsdata
+datiAnagraficiFornitore=Meta-Leverantörsnamnsdata
 deleteContact=Radera
-DeleteMetasupplierRow=Är du säker på att du vill ta bort vald leverantör
+DeleteMetasupplierRow=Är du säker på att du vill ta bort vald Leverantörsnamn
 Disattivato=Inaktiverad
 editContact=Redigera
 EKORG=Inköpsorganisation
 elimina=Radera
 ERR_file_not_found=Filen hittades inte
 ERR_file_size =Varning fil överstiger 5Mb
-ERR_No_Supplier_Selected =Ingen leverantör vald
+ERR_No_Supplier_Selected =Ingen Leverantörsnamn vald
 ERR_Type_missmatch =Endast xlx, docx, pdf, txt är tillåtna
 errorCreatingMetasupplier=Fel vid skapande av metasupplier
 errorCreatingMetasupplierContact=Fel vid skapande av kontakt
@@ -39,9 +39,9 @@ errorUpdateingMetasupplierContact=Fel vid uppdatering av kontakt
 fileName=Filnamn
 indirizzo=Adress
 iva =P.IVA
-LIFNR=Leverantörskod
+LIFNR=Leverantörsnamnskod
 lingua=Språk
-M=Leverantörens referenskontakter
+M=Leverantörsnamnens referenskontakter
 metasupplierContactCreated=Kontakt skapad
 metasupplierContactDeleted=Kontakt raderad
 metasupplierContactUpdated=Kontakt uppdaterad
@@ -55,34 +55,35 @@ Name=namn
 nCivico=gatunummer
 noData=Ingen kontakt närvarande
 noMetasupplierFoundForUser=Ingen metasupplier hittades för den aktuella användaren
-noUploadPossible=Ingen leverantör hittades för det här omöjliga uppladdningsdokumentet för metasupplier.
+noUploadPossible=Ingen Leverantörsnamn hittades för det här omöjliga uppladdningsdokumentet för metasupplier.
 obsoleto=Obsolet
 OK_Upload=Filen korrekt laddad
 organizzazioneAcquisti=Köper org.
-paeseFornitore=Leverantörsland
+paeseFornitore=Leverantörsnamnsland
 paeseMetafornitore=Metasupplierland
-pivaFornitore=Leverantörs moms kod
+pivaFornitore=Leverantörsnamns moms kod
 pivaMetafornitore=Metasuppliers moms-kod
 provincia=Land
 purchaseOrganization=Inköpsorganisation
-ragioneSocialeFornitore=Leverantörs företagsnamn
+ragioneSocialeFornitore=Leverantörsnamns företagsnamn
 ragSocialeMetafornitore=Metasupplierföretags namn
 registrazione=Registrering
 reset=Återställa
 resetContact=Återställa kontakt
 saveContact=Spara
-selectAtLeastOneRow=Välj minst en leverantör
+selectAtLeastOneRow=Välj minst en Leverantörsnamn
 selectContactType=Välj kontakttyp
 statoMetafornitore=Metasuppliertillstånd
 StatoMetafornitore=Status
 street=Gata
-Supplier=Leverantörskod
-supplierName =Leverantörsnamn
+Supplier=Leverantör
+supplierName =Leverantörsnamnsnamn
 surname=Efternamn
 Surname=efternamn
 title=Metasupplierhantering
 titleCreateMetasupplier=Skapa metasupplier
 titleForm=Titel
-titleModMetaSup =Uppdatera meta-leverantör
-titleSuppliers=leverantörer
+titleModMetaSup =Uppdatera meta-Leverantörsnamn
+titleSuppliers=Leverantörsnamner
 uploadDoc=Ladda upp dokument
+PLANT_DESCR =Anläggningsbeskrivning
