--- a/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_sv_SE.properties
+++ b/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_sv_SE.properties
@@ -8,28 +8,28 @@ EBELN=Inköpsdokument
 EBELP=Artikel
 EKGRP=Inköpsgrupp
 EKORG=Inköpsorganisation
-IDNLF=Leverantörs material
+IDNLF=Leverantörsnamns material
 it_pregresso=utgånget
 KONNR=Kontrakt
 KTMNG=Kontraktsantal
 KTPNR=Kontrakt. Pos
-LIFNRr=Leverantör
+LIFNRr=Leverantörsnamn
 loading=läser in
 LWEDT=Sista GR: datum
 LWEMG=Sista GR: antal
-materialCode =Materialkod
+Material nummer
 materialDescr =Materialbeskrivning
 MATNR=Material
 MEINS=UoM
 METASUP =Metasupplier
-NAME1 =Leverantör
+NAME1 =Leverantörsnamn
 OPENCLOSE=A / C
 Ordine =Order
 PianoConsegna=Leveransplan
 Previsionale =Prognostisering
 SchedMod=Schema Mod.
 Search =Sök
-supplier=Leverantör
+supplier=Leverantörsnamn
 SYSID=SystemID
 Tipo=Typ
 title=Titel
