--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
@@ -330,7 +330,7 @@ orderConfirmation=AB - Order receiver confirmation
 TOT=Total
  
 #XTXT: 
-EBELP=Position
+EBELP=Items
  
 #XTXT: 
 SYSID=System ID
