--- a/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n.properties
@@ -83,6 +83,7 @@ DIREZIONE=Direzione
 TIME_DEPENDENT=Time Dependernt
 GG_ESTRAZIONE=Giorni Estrazione
 PROGRESSIVI=Progressivi
+NOT_RELEASED=Non Rilasciati
 ZAPPPERSUP=Percentuale Superiore
 ZAPPPERINF=Percfentuale Inferiore
 ZAPPGGSUP=Num. giorni Superiore
