Modifiche Stampa Ordini + Nuova APP

--- a/AUPSUP_HTML5_CONTO_LAV/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_CONTO_LAV/webapp/i18n/i18n_en.properties
@@ -1,5 +1,5 @@
-title=Confirm Status
-appTitle=Confirm Status
+title=Stocks for Worker 
+appTitle=Stocks for Worker 
 appDescription=
 
 supplierOrdersHeader = Supplier Orders Headers
