--- a/AUPSUP_HTML5_CONTO_LAV/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_CONTO_LAV/webapp/i18n/i18n_it_IT.properties
@@ -1,5 +1,5 @@
-title=Storico Conferme
-appTitle=Storico Conferme
+title=Giacenze Conto Lavorista
+appTitle=Giacenze Conto Lavorista
 appDescription=
 
 supplierOrdersHeader = Testata Piani di Consegna Fornitore
